--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,6 @@
 [build-system]
-requires = [
-    "setuptools>=66.1.0",
-    "wheel",
-]
-build-backend = "setuptools.build_meta"
+requires = ['flit_core >=3.2,<4']
+build-backend = 'flit_core.buildapi'
 
 [project]
 name = "browserfetch"
@@ -33,18 +30,18 @@ content-type = "text/x-rst"
 [project.urls]
 Homepage = "https://github.com/5j9/browserfetch"
 
-[tool.setuptools]
-packages = ["browserfetch"]
-zip-safe = false
-include-package-data = false
-
-[tool.setuptools.dynamic.version]
-attr = "browserfetch.__version__"
-
-[tool.setuptools.package-data]
-browserfetch = ["*.js"]
-
 [tool.ruff]
-format.quote-style = 'single'
 line-length = 79
-isort.combine-as-imports = true
+format.quote-style = 'single'
+lint.isort.combine-as-imports = true
+lint.extend-select = [
+    'I',  # isort
+    'UP',  # pyupgrade
+]
+lint.ignore = [
+    'UP027',  # list comprehensions are faster than generator expressions
+    'E721',  # Do not compare types, use `isinstance()`
+]
+
+[tool.pytest.ini_options]
+addopts = '--quiet --tb=short'
