--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,13 +35,22 @@ line-length = 79
 format.quote-style = 'single'
 lint.isort.combine-as-imports = true
 lint.extend-select = [
+    'FA',  # flake8-future-annotations
     'I',  # isort
     'UP',  # pyupgrade
 ]
 lint.ignore = [
-    'UP027',  # list comprehensions are faster than generator expressions
     'E721',  # Do not compare types, use `isinstance()`
 ]
 
 [tool.pytest.ini_options]
 addopts = '--quiet --tb=short'
+
+[tool.pyright]
+typeCheckingMode = 'standard'
+reportDeprecated = "warning"
+reportPropertyTypeMismatch = "warning"
+reportUnnecessaryCast = "warning"
+reportUnnecessaryContains = "warning"
+reportUnnecessaryIsInstance = "warning"
+reportUnnecessaryTypeIgnoreComment = true
