chore(pyproject): update settings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ line-length = 79
 format.quote-style = 'single'
 lint.isort.combine-as-imports = true
 lint.extend-select = [
+    'W605', # invalid-escape-sequence
     'FA',  # flake8-future-annotations
     'I',  # isort
     'UP',  # pyupgrade
@@ -55,3 +56,7 @@ reportUnnecessaryCast = "warning"
 reportUnnecessaryContains = "warning"
 reportUnnecessaryIsInstance = "warning"
 reportUnnecessaryTypeIgnoreComment = true
+reportInvalidStringEscapeSequence = false
+reportConstantRedefinition = 'error'
+reportTypeCommentUsage = 'warning'
+reportUnnecessaryComparison = 'warning'
