--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,9 @@ lint.ignore = [
 
 [tool.pytest.ini_options]
 addopts = '--quiet --tb=short'
+asyncio_mode = "auto"
+asyncio_default_test_loop_scope = "session"
+asyncio_default_fixture_loop_scope = "session"
 
 [tool.pyright]
 typeCheckingMode = 'standard'
@@ -65,3 +68,10 @@ reportInvalidStringEscapeSequence = false
 reportConstantRedefinition = 'error'
 reportTypeCommentUsage = 'warning'
 reportUnnecessaryComparison = 'warning'
+
+[dependency-groups]
+dev = [
+    "playwright>=1.52.0",
+    "pytest>=8.4.0",
+    "pytest-asyncio>=1.0.0",
+]
