--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,5 +76,6 @@ module-name = "browserfetch"
 dev = [
     "playwright>=1.52.0",
     "pytest>=8.4.0",
+    "pytest-aiohttp>=1.1.0",
     "pytest-asyncio>=1.0.0",
 ]
